Added update for Applications
