# spring-server/src/main/resources/api-spec.yaml
@@ -43,6 +43,25 @@ paths:
           description: "Application not found"
         405:
           description: "Invalid input"
+    put:
+      description: update an existing application
+      operationId: updateApplication
+      consumes:
+        - application/json
+      parameters:
+        - name: body
+          in: body
+          description: The info required to update an application
+          schema:
+            $ref: '#/definitions/ApplicationUpdate'
+          required: true
+      responses:
+        201:
+          description: Update an existing application
+        404:
+          description: "Application not found"
+        405:
+          description: "Invalid input"
   /auth:
     post:
       operationId: authenticateApplicationAndGetToken
@@ -69,14 +88,14 @@ paths:
       description:  Retrieve one user by id
       operationId: findUserById
       parameters:
-      - $ref: '#/parameters/TokenHeader'
-      - name: id
-        in: path
-        description: id of the user to fetch
-        required: true
-        type: string
+        - $ref: '#/parameters/TokenHeader'
+        - name: id
+          in: path
+          description: id of the user to fetch
+          required: true
+          type: string
       produces:
-      - application/json
+        - application/json
       responses:
         200:
           description:
@@ -259,6 +278,15 @@ definitions:
       applicationName:
         type: string
       applicationKeyUUID:
+        type: string
+      applicationSecretUUID:
+        type: string
+  ApplicationUpdate:
+    type: object
+    properties:
+      applicationNewName:
+        type: string
+      applicationKey:
         type: string
       applicationSecretUUID:
         type: string
